# paddington

./: .clang-format  .gitignore  license  readme
data-analysis/: calibration.py  pyproject.toml
data/calibration/: embedded-double-1.0kg.csv  embedded-double-2.5kg.csv  embedded-single-0.0kg.csv  embedded-single-1.75kg.csv  embedded-single-2.5kg.csv  embedded-single-3.5kg.csv  embedded-single-4.5kg.csv  readme
data/calibration/op-amp-circuit/: embedded-double-0.0kg.csv  embedded-double-1.75kg.csv  embedded-double-3.0kg.csv  embedded-double-3.5kg.csv  embedded-double-4.5kg.csv  embedded-single-1.0kg.csv  embedded-single-3.0kg.csv
data/calibration/voltage-divider-circuit/: embedded-double-0.0kg.csv  embedded-double-1.0kg.csv  embedded-double-1.75kg.csv  embedded-double-2.0kg.csv  embedded-double-2.5kg.csv  embedded-double-2.75kg.csv  embedded-double-3.0kg.csv  embedded-double-3.5kg.csv  embedded-double-3.75kg.csv  embedded-double-4.5kg.csv  embedded-single-0.0kg.csv  embedded-single-1.0kg.csv  embedded-single-1.75kg.csv  embedded-single-2.0kg.csv  embedded-single-2.5kg.csv  embedded-single-2.75kg.csv  embedded-single-3.0kg.csv  embedded-single-3.5kg.csv  embedded-single-3.75kg.csv  embedded-single-4.5kg.csv
teensy/src/paddington/: cal.cxx  cal.h  comm.cxx  comm.h  lumberyard.cxx  lumberyard.h  paddington.ino
